--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
     "serve": "serve --no-clipboard --single --listen 8811 build",
     "lint": "eslint . --cache-location node_modules/.cache/eslint",
     "format": "prettier --write \"**/*.+(js|json|css|md|mdx|html)\"",
-    "setup": "node setup"
+    "setup": "node setup",
+    "validate-exercises": "node ./scripts/validate-exercises",
+    "validate": "npm run validate-exercises && npm-run-all --parallel lint test:coverage build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -105,11 +107,11 @@
   "main": "go.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HelpMe-Pls/bookshelf.git"
+    "url": "git+https://github.com/kentcdodds/bookshelf.git"
   },
   "keywords": [],
   "bugs": {
-    "url": "https://github.com/HelpMe-Pls/bookshelf/issues"
+    "url": "https://github.com/kentcdodds/bookshelf/issues"
   },
   "msw": {
     "workerDirectory": "public"
